tests/unit/verification/snapshots/unit_test__verification__config__verification_custom_responsibility_mapping.snap
---
source: tests/unit/verification/config.rs
assertion_line: 73
expression: rendered
---
[verify] src/api.rs
   |owner: src/api
   |security: pending phase=before_release fingerprint=rustv:be5021ff926a2e4c
   |why: security=profile config maps responsibilities to security verification
   |requires: security=attack_classes,authorization_boundary,findings
   |fact: security.profile=public_api
   |contract: security=security skill must report scanned attack classes and authorization-boundary result for this fingerprint
