tests/unit/verification/snapshots/unit_test__verification__config__verification_custom_stress_contract.snap
---
source: tests/unit/verification/config.rs
assertion_line: 46
expression: rendered
---
[verify] src/api.rs
   |owner: src/api
   |stress: pending phase=before_release fingerprint=rustv:bbbccdc62d977a33
   |why: stress=profile declares public or latency-sensitive surface
   |requires: stress=tenant_slo,saturation_step
   |fact: stress.profile=public_api
   |contract: stress=custom stress skill must report tenant SLO and saturation step
