tests/unit/verification/snapshots/unit_test__verification__config__verification_profile_disabled_owner_task.snap
---
source: tests/unit/verification/config.rs
expression: rendered
---
[verify] src/api.rs
   |owner: src/api
   |responsibility_review: pending phase=before_verification fingerprint=rustv:4599954b95b7faff
   |why: responsibility_review=owner-local verification override references disabled task kind
   |requires: responsibility_review=profile_resolution
   |fact: responsibility_review.configured=stress
   |fact: responsibility_review.disabled=stress
   |contract: responsibility_review=update the verification profile hint to match parser facts, or attach a complete waiver
