tests/unit/verification/snapshots/unit_test__verification__config__verification_profile_owner_local_task_kinds.snap
---
source: tests/unit/verification/config.rs
expression: rendered
---
[verify] src/api.rs
   |owner: src/api
   |security: pending phase=before_release fingerprint=rustv:d7072252e8144694
   |why: security=owner profile explicitly requests security verification
   |requires: security=attack_classes,authorization_boundary,findings
   |fact: security.profile=public_api
   |fact: security.rationale=this slice changes route authorization
   |contract: security=security skill must report scanned attack classes and authorization-boundary result for this fingerprint
